Debug swagger
